Fix event.component spacing

--- a/src/app/events/events.component.scss
+++ b/src/app/events/events.component.scss
@@ -7,15 +7,16 @@
   flex-flow: column;
 
   header {
-    padding-top: $grid-gutter-width / 2;
+    padding-top: $spacer;
 
     h1 {
+      margin-bottom: $spacer * .25;
       font-weight: $display4-weight;
     }
 
     nav {
       display: flex;
-      height: 42px;
+      height: calc(2.75rem - 2px);
       margin-left: - ($grid-gutter-width / 2);
       margin-right: - ($grid-gutter-width / 2);
       padding-left: $grid-gutter-width / 4;
